# XenAdminQt

./: CMakeLists.txt
.github/workflows/: build.yml  release.yml
docs/: status.md
packaging/: package-deb.sh
src/xenadmin-ui/: CMakeLists.txt  mainwindow.cpp  resources.qrc  settingsmanager.cpp  xenadmin-ui.pro
src/xenadmin-ui/ConsoleView/: ConsolePanel.cpp  ConsolePanel.h  VNCGraphicsClient.cpp  VNCGraphicsClient.h  VNCTabView.cpp  VNCView.cpp  XSVNCScreen.cpp  XSVNCScreen.h
src/xenadmin-ui/commands/: contextmenubuilder.cpp
src/xenadmin-ui/commands/storage/: addvirtualdiskcommand.cpp  addvirtualdiskcommand.h  attachvirtualdiskcommand.cpp  attachvirtualdiskcommand.h  detachsrcommand.cpp  detachvirtualdiskcommand.cpp  trimsrcommand.cpp  trimsrcommand.h  vbdcommand.cpp  vbdcommand.h  vdicommand.cpp  vdicommand.h
src/xenadmin-ui/commands/template/: copytemplatecommand.cpp  copytemplatecommand.h  createvmfromtemplatecommand.cpp  exporttemplatecommand.cpp  exporttemplatecommand.h  instantvmfromtemplatecommand.cpp  instantvmfromtemplatecommand.h  newvmfromtemplatecommand.cpp  newvmfromtemplatecommand.h  templatecommand.cpp  templatecommand.h
src/xenadmin-ui/commands/vm/: changecdisocommand.h  deletevmcommand.cpp
src/xenadmin-ui/controls/: affinitypicker.cpp  affinitypicker.h  multipledvdisolist.cpp
src/xenadmin-ui/dialogs/: editvmhaprioritiesdialog.cpp  hawizard.cpp  movevirtualdiskdialog.h  newsrwizard.cpp  newsrwizard.h  newsrwizard.ui  newvmwizard.cpp
src/xenadmin-ui/navigation/: navigationview.cpp
src/xenadmin-ui/network/: httpconnect.cpp  httpconnect.h
src/xenadmin-ui/settingspanels/: homeservereditpage.cpp  hostmultipathpage.cpp  pooladvancededitpage.cpp  pooladvancededitpage.h  pooladvancededitpage.ui
src/xenadmin-ui/tabpages/: basetabpage.cpp  basetabpage.h  consoletabpage.cpp  consoletabpage.h  cvmconsoletabpage.cpp  cvmconsoletabpage.h  generaltabpage.cpp  generaltabpage.h  gputabpage.cpp  gputabpage.h  hatabpage.cpp  hatabpage.h  memorytabpage.cpp  memorytabpage.h  networktabpage.cpp  networktabpage.h  nicstabpage.cpp  nicstabpage.h  performancetabpage.cpp  performancetabpage.h  physicalstoragetabpage.cpp  physicalstoragetabpage.h  searchtabpage.cpp  searchtabpage.h  snapshotstabpage.cpp  snapshotstabpage.h  snapshotstabpage.ui  srstoragetabpage.cpp  srstoragetabpage.h  vmstoragetabpage.cpp  vmstoragetabpage.h
src/xenadmin-ui/widgets/: cdchanger.cpp  notificationssubmodeitem.h  progressbardelegate.h  vmmemorycontrols.cpp  vmmemorycontrols.h  vmmemoryrow.cpp  vmmemoryrow.h
src/xenlib/: CMakeLists.txt
src/xenlib/xen/: asyncoperation.cpp  pool.cpp  pool.h  sr.cpp  sr.h  vdi.cpp  vdi.h  vif.cpp  vif.h  vm.cpp  vm.h  xenobject.cpp  xenobject.h
src/xenlib/xen/actions/pool/: setpoolpropertyaction.cpp  setpoolpropertyaction.h
src/xenlib/xen/actions/sr/: srtrimaction.cpp
src/xenlib/xen/actions/vm/: createcddriveaction.cpp  vmmigrateaction.cpp  vmmigrateaction.h  vmsnapshotrevertaction.cpp
src/xenlib/xen/network/: connection.cpp
src/xenlib/xen/xenapi/: vm_appliance.h  xenapi_Blob.h  xenapi_Bond.h  xenapi_Cluster_host.h  xenapi_GPU_group.h  xenapi_Helper.h  xenapi_Host.h  xenapi_Network.h  xenapi_Network_sriov.h  xenapi_PBD.h  xenapi_PGPU.h  xenapi_PIF.h  xenapi_Pool.cpp  xenapi_Pool.h  xenapi_Role.h  xenapi_SR.h  xenapi_Secret.h  xenapi_Session.h  xenapi_Task.h  xenapi_Tunnel.h  xenapi_UserDetails.h  xenapi_VBD.h  xenapi_VDI.h  xenapi_VGPU.h  xenapi_VIF.h  xenapi_VLAN.h  xenapi_VM.h
src/xenlib/xensearch/: common.cpp  search.cpp
toolchains/: riscv64-linux-gnu.cmake
