set(XENADMIN_SOURCES
    commands/command.cpp
    commands/connection/cancelhostconnectioncommand.cpp
    commands/connection/disconnectcommand.cpp
    commands/connection/disconnecthostsandpoolscommand.cpp
    commands/connection/forgetsavedpasswordcommand.cpp
    commands/contextmenubuilder.cpp
    commands/folder/deletefoldercommand.cpp
    commands/folder/dragdropintofoldercommand.cpp
    commands/folder/newfoldercommand.cpp
    commands/folder/removefromfoldercommand.cpp
    commands/folder/renamefoldercommand.cpp
    commands/host/certificatecommand.cpp
    commands/host/changecontroldomainmemorycommand.cpp
    commands/host/changehostpasswordcommand.cpp
    commands/host/connectallhostscommand.cpp
    commands/host/destroyhostcommand.cpp
    commands/host/disconnectallhostscommand.cpp
    commands/host/disconnecthostcommand.cpp
    commands/host/hostcommand.cpp
    commands/host/hostmaintenancemodecommand.cpp
    commands/host/hostpasswordcommand.cpp
    commands/host/hostpropertiescommand.cpp
    commands/host/hostreconnectascommand.cpp
    commands/host/poweronhostcommand.cpp
    commands/host/reboothostcommand.cpp
    commands/host/reconnecthostcommand.cpp
    commands/host/removehostcommand.cpp
    commands/host/rescanpifscommand.cpp
    commands/host/restarttoolstackcommand.cpp
    commands/host/shutdownhostcommand.cpp
    commands/network/destroybondcommand.cpp
    commands/network/networkpropertiescommand.cpp
    commands/network/newnetworkcommand.cpp
    commands/pool/addhosttopoolcommand.cpp
    commands/pool/addhosttoselectedpoolmenu.cpp
    commands/pool/addnewhosttopoolcommand.cpp
    commands/pool/addselectedhosttopoolmenu.cpp
    commands/pool/deletepoolcommand.cpp
    commands/pool/disconnectpoolcommand.cpp
    commands/pool/hacommand.cpp
    commands/pool/haconfigurecommand.cpp
    commands/pool/hadisablecommand.cpp
    commands/pool/joinpoolcommand.cpp
    commands/pool/newpoolcommand.cpp
    commands/pool/poolcommand.cpp
    commands/pool/poolpropertiescommand.cpp
    commands/pool/poolremoveservermenu.cpp
    commands/pool/removehostfrompoolcommand.cpp
    commands/pool/rotatepoolsecretcommand.cpp
    commands/rebootcommand.cpp
    commands/shutdowncommand.cpp
    commands/storage/activatevbdcommand.cpp
    commands/storage/addvirtualdiskcommand.cpp
    commands/storage/attachvirtualdiskcommand.cpp
    commands/storage/deactivatevbdcommand.cpp
    commands/storage/deletevirtualdiskcommand.cpp
    commands/storage/destroysrcommand.cpp
    commands/storage/detachsrcommand.cpp
    commands/storage/detachvirtualdiskcommand.cpp
    commands/storage/forgetsrcommand.cpp
    commands/storage/migratevirtualdiskcommand.cpp
    commands/storage/movevirtualdiskcommand.cpp
    commands/storage/newsrcommand.cpp
    commands/storage/reattachsrcommand.cpp
    commands/storage/repairsrcommand.cpp
    commands/storage/setdefaultsrcommand.cpp
    commands/storage/srcommand.cpp
    commands/storage/storagepropertiescommand.cpp
    commands/storage/trimsrcommand.cpp
    commands/storage/vbdcommand.cpp
    commands/storage/vdicommand.cpp
    commands/storage/vdieditsizelocationcommand.cpp
    commands/tag/deletetagcommand.cpp
    commands/tag/dragdroptagcommand.cpp
    commands/tag/edittagscommand.cpp
    commands/tag/renametagcommand.cpp
    commands/template/copytemplatecommand.cpp
    commands/template/createvmfromtemplatecommand.cpp
    commands/template/deletetemplatecommand.cpp
    commands/template/exporttemplatecommand.cpp
    commands/template/instantvmfromtemplatecommand.cpp
    commands/template/newvmfromtemplatecommand.cpp
    commands/template/templatecommand.cpp
    commands/vm/changecdisocommand.cpp
    commands/vm/clonevmcommand.cpp
    commands/vm/convertvmtotemplatecommand.cpp
    commands/vm/copyvmcommand.cpp
    commands/vm/crosspoolmigratecommand.cpp
    commands/vm/crosspoolmovevmcommand.cpp
    commands/vm/deletesnapshotcommand.cpp
    commands/vm/deletevmcommand.cpp
    commands/vm/deletevmsandtemplatescommand.cpp
    commands/vm/disablechangedblocktrackingcommand.cpp
    commands/vm/exportsnapshotastemplatecommand.cpp
    commands/vm/exportvmcommand.cpp
    commands/vm/forcerebootvmcommand.cpp
    commands/vm/forceshutdownvmcommand.cpp
    commands/vm/importvmcommand.cpp
    commands/vm/installtoolscommand.cpp
    commands/vm/movevmcommand.cpp
    commands/vm/newtemplatefromsnapshotcommand.cpp
    commands/vm/newvmcommand.cpp
    commands/vm/newvmfromsnapshotcommand.cpp
    commands/vm/pausevmcommand.cpp
    commands/vm/restartvmcommand.cpp
    commands/vm/resumevmcommand.cpp
    commands/vm/reverttosnapshotcommand.cpp
    commands/vm/startvmcommand.cpp
    commands/vm/stopvmcommand.cpp
    commands/vm/suspendvmcommand.cpp
    commands/vm/takesnapshotcommand.cpp
    commands/vm/uninstallvmcommand.cpp
    commands/vm/unpausevmcommand.cpp
    commands/vm/vappexportcommand.cpp
    commands/vm/vapppropertiescommand.cpp
    commands/vm/vappshutdowncommand.cpp
    commands/vm/vappstartcommand.cpp
    commands/vm/vmcommand.cpp
    commands/vm/vmlifecyclecommand.cpp
    commands/vm/vmoperationhelpers.cpp
    commands/vm/vmpropertiescommand.cpp
    commands/vm/vmrecoverymodecommand.cpp
    connectionprofile.cpp
    ConsoleView/ConsoleKeyHandler.cpp
    ConsoleView/ConsolePanel.cpp
    ConsoleView/ConsolePanel.ui
    ConsoleView/RdpClient.cpp
    ConsoleView/VNCGraphicsClient.cpp
    ConsoleView/VNCTabView.cpp
    ConsoleView/VNCTabView.ui
    ConsoleView/VNCView.cpp
    ConsoleView/XSVNCScreen.cpp
    controls/affinitypicker.cpp
    controls/affinitypicker.ui
    controls/bonddetailswidget.cpp
    controls/bonddetailswidget.ui
    controls/connectionwrapperwithmorestuff.cpp
    controls/customdatagraph/archivemaintainer.cpp
    controls/customdatagraph/dataarchive.cpp
    controls/customdatagraph/dataeventlist.cpp
    controls/customdatagraph/datakey.cpp
    controls/customdatagraph/dataplot.cpp
    controls/customdatagraph/dataplotnav.cpp
    controls/customdatagraph/dataset.cpp
    controls/customdatagraph/datasourceitem.cpp
    controls/customdatagraph/graphhelpers.cpp
    controls/customdatagraph/graphlist.cpp
    controls/customdatagraph/palette.cpp
    controls/customtreenode.cpp
    controls/customtreeview.cpp
    controls/decentgroupbox.cpp
    controls/dropdownbutton.cpp
    controls/gpuconfiguration.cpp
    controls/gpuplacementpolicypanel.cpp
    controls/gpurow.cpp
    controls/gpushinybar.cpp
    controls/hostmemoryrow.cpp
    controls/hostmemoryrow.ui
    controls/hostshinybar.cpp
    controls/memorybar.cpp
    controls/memoryspinner.cpp
    controls/multipledvdisolist.cpp
    controls/multipledvdisolist.ui
    controls/pdsection.cpp
    controls/shinybar.cpp
    controls/snapshottreeview.cpp
    controls/srpicker.cpp
    controls/srpicker.ui
    controls/tooltipcontainer.cpp
    controls/vgpucombobox.cpp
    controls/vmoperationmenu.cpp
    controls/vmshinybar.cpp
    controls/xensearch/foldernavigator.cpp
    controls/xensearch/groupingcontrol.cpp
    controls/xensearch/queryelement.cpp
    controls/xensearch/querypanel.cpp
    controls/xensearch/querytype.cpp
    controls/xensearch/resourceselectbutton.cpp
    controls/xensearch/searcher.cpp
    controls/xensearch/searchoutput.cpp
    controls/xensearch/treewidgetgroupacceptor.cpp
    dialogs/aboutdialog.cpp
    dialogs/aboutdialog.ui
    dialogs/actionprogressdialog.cpp
    dialogs/actionprogressdialog.ui
    dialogs/addserverdialog.cpp
    dialogs/addserverdialog.ui
    dialogs/addvgpudialog.cpp
    dialogs/attachvirtualdiskdialog.cpp
    dialogs/attachvirtualdiskdialog.ui
    dialogs/ballooningdialog.cpp
    dialogs/ballooningdialog.ui
    dialogs/bondpropertiesdialog.cpp
    dialogs/bondpropertiesdialog.ui
    dialogs/changeserverpassworddialog.cpp
    dialogs/changeserverpassworddialog.ui
    dialogs/commanderrordialog.cpp
    dialogs/commanderrordialog.ui
    dialogs/confirmvmdeletedialog.cpp
    dialogs/confirmvmdeletedialog.ui
    dialogs/connectingtoserverdialog.cpp
    dialogs/connectingtoserverdialog.ui
    dialogs/controldomainmemorydialog.cpp
    dialogs/controldomainmemorydialog.ui
    dialogs/copyvmdialog.cpp
    dialogs/copyvmdialog.ui
    dialogs/crosspoolmigratewizard_copymodepage.cpp
    dialogs/crosspoolmigratewizard_copymodepage.ui
    dialogs/crosspoolmigratewizard.cpp
    dialogs/crosspoolmigratewizard_intrapoolcopypage.cpp
    dialogs/crosspoolmigratewizard_intrapoolcopypage.ui
    dialogs/crosspoolmigratewizardpages.cpp
    dialogs/crosspoolmigratewizard.ui
    dialogs/customsearchdialog.cpp
    dialogs/customsearchdialog.ui
    dialogs/debugwindow.cpp
    dialogs/debugwindow.ui
    dialogs/editvmhaprioritiesdialog.cpp
    dialogs/exportwizard.cpp
    dialogs/folderchangedialog.cpp
    dialogs/hawizard.cpp
    dialogs/hawizard.ui
    dialogs/hostpropertiesdialog.cpp
    dialogs/importwizard.cpp
    dialogs/migratevirtualdiskdialog.cpp
    dialogs/movevirtualdiskdialog.cpp
    dialogs/movevirtualdiskdialog.ui
    dialogs/movevmdialog.cpp
    dialogs/movevmdialog.ui
    dialogs/networkingpropertiesdialog.cpp
    dialogs/networkingpropertiesdialog.ui
    dialogs/networkingpropertiespage.cpp
    dialogs/networkingpropertiespage.ui
    dialogs/networkpropertiesdialog.cpp
    dialogs/newnetworkwizard.cpp
    dialogs/newnetworkwizard.ui
    dialogs/newpooldialog.cpp
    dialogs/newpooldialog.ui
    dialogs/newsrwizard.cpp
    dialogs/newsrwizard.ui
    dialogs/newtagdialog.cpp
    dialogs/newvirtualdiskdialog.cpp
    dialogs/newvirtualdiskdialog.ui
    dialogs/newvmwizard.cpp
    dialogs/newvmwizard.ui
    dialogs/optionsdialog.cpp
    dialogs/optionsdialog.ui
    dialogs/optionspages/confirmationoptionspage.cpp
    dialogs/optionspages/confirmationoptionspage.ui
    dialogs/optionspages/connectionoptionspage.cpp
    dialogs/optionspages/connectionoptionspage.ui
    dialogs/optionspages/consolesoptionspage.cpp
    dialogs/optionspages/consolesoptionspage.ui
    dialogs/optionspages/displayoptionspage.cpp
    dialogs/optionspages/displayoptionspage.ui
    dialogs/optionspages/saveandrestoreoptionspage.cpp
    dialogs/optionspages/saveandrestoreoptionspage.ui
    dialogs/optionspages/securityoptionspage.cpp
    dialogs/optionspages/securityoptionspage.ui
    dialogs/poolpropertiesdialog.cpp
    dialogs/reconnectasdialog.cpp
    dialogs/reconnectasdialog.ui
    dialogs/repairsrdialog.cpp
    dialogs/repairsrdialog.ui
    dialogs/restoresession/changemainpassworddialog.cpp
    dialogs/restoresession/changemainpassworddialog.ui
    dialogs/restoresession/entermainpassworddialog.cpp
    dialogs/restoresession/entermainpassworddialog.ui
    dialogs/restoresession/saveandrestoredialog.cpp
    dialogs/restoresession/saveandrestoredialog.ui
    dialogs/restoresession/setmainpassworddialog.cpp
    dialogs/restoresession/setmainpassworddialog.ui
    dialogs/snapshotpropertiesdialog.cpp
    dialogs/storagepropertiesdialog.cpp
    dialogs/vdipropertiesdialog.cpp
    dialogs/vdipropertiesdialog.ui
    dialogs/verticallytabbeddialog.cpp
    dialogs/verticallytabbeddialog.ui
    dialogs/vifdialog.cpp
    dialogs/vifdialog.ui
    dialogs/vmappliancepropertiesdialog.cpp
    dialogs/vmpropertiesdialog.cpp
    dialogs/vmsnapshotdialog.cpp
    dialogs/vmsnapshotdialog.ui
    dialogs/warningdialogs/closexencenterwarningdialog.cpp
    dialogs/warningdialogs/closexencenterwarningdialog.ui
    dialogs/warningdialogs/warningdialog.cpp
    dialogs/xencacheexplorer.cpp
    dialogs/xencacheexplorer.ui
    iconmanager.cpp
    main.cpp
    mainwindow.cpp
    mainwindowtreebuilder.cpp
    mainwindow.ui
    navigation/navigationbuttons.cpp
    navigation/navigationhistory.cpp
    navigation/navigationpane.cpp
    navigation/navigationpane.ui
    navigation/navigationview.cpp
    navigation/navigationview.ui
    network/httpconnect.cpp
    network/xenconnectionui.cpp
    placeholderwidget.cpp
    resources.qrc
    selectionmanager.cpp
    settingsmanager.cpp
    settingspanels/bootoptionseditpage.cpp
    settingspanels/bootoptionseditpage.ui
    settingspanels/cpumemoryeditpage.cpp
    settingspanels/cpumemoryeditpage.ui
    settingspanels/customfieldsdisplaypage.cpp
    settingspanels/customfieldsdisplaypage.ui
    settingspanels/generaleditpage.cpp
    settingspanels/generaleditpage.ui
    settingspanels/gpueditpage.cpp
    settingspanels/homeservereditpage.cpp
    settingspanels/homeservereditpage.ui
    settingspanels/hostautostarteditpage.cpp
    settingspanels/hostautostarteditpage.ui
    settingspanels/hostmultipathpage.cpp
    settingspanels/hostmultipathpage.ui
    settingspanels/hostpoweroneditpage.cpp
    settingspanels/hostpoweroneditpage.ui
    settingspanels/ieditpage.cpp
    settingspanels/livepatchingeditpage.cpp
    settingspanels/livepatchingeditpage.ui
    settingspanels/logdestinationeditpage.cpp
    settingspanels/logdestinationeditpage.ui
    settingspanels/networkgeneraleditpage.cpp
    settingspanels/networkgeneraleditpage.ui
    settingspanels/networkoptionseditpage.cpp
    settingspanels/networkoptionseditpage.ui
    settingspanels/perfmonalerteditpage.cpp
    settingspanels/perfmonalerteditpage.ui
    settingspanels/pooladvancededitpage.cpp
    settingspanels/pooladvancededitpage.ui
    settingspanels/poolgpueditpage.cpp
    settingspanels/securityeditpage.cpp
    settingspanels/securityeditpage.ui
    settingspanels/vbdeditpage.cpp
    settingspanels/vbdeditpage.ui
    settingspanels/vdisizelocationpage.cpp
    settingspanels/vdisizelocationpage.ui
    settingspanels/vmadvancededitpage.cpp
    settingspanels/vmadvancededitpage.ui
    settingspanels/vmenlightenmenteditpage.cpp
    settingspanels/vmenlightenmenteditpage.ui
    settingspanels/vmhaeditpage.cpp
    settingspanels/vmhaeditpage.ui
    tabpages/alertsummarypage.cpp
    tabpages/alertsummarypage.ui
    tabpages/basetabpage.cpp
    tabpages/consoletabpage.cpp
    tabpages/consoletabpage.ui
    tabpages/cvmconsoletabpage.cpp
    tabpages/cvmconsoletabpage.ui
    tabpages/eventspage.cpp
    tabpages/eventspage.ui
    tabpages/generaltabpage.cpp
    tabpages/generaltabpage.ui
    tabpages/gputabpage.cpp
    tabpages/gputabpage.ui
    tabpages/hatabpage.cpp
    tabpages/hatabpage.ui
    tabpages/memorytabpage.cpp
    tabpages/memorytabpage.ui
    tabpages/networktabpage.cpp
    tabpages/networktabpage.ui
    tabpages/nicstabpage.cpp
    tabpages/nicstabpage.ui
    tabpages/notificationsbasepage.cpp
    tabpages/performancetabpage.cpp
    tabpages/performancetabpage.ui
    tabpages/physicalstoragetabpage.cpp
    tabpages/physicalstoragetabpage.ui
    tabpages/searchtabpage.cpp
    tabpages/snapshotstabpage.cpp
    tabpages/snapshotstabpage.ui
    tabpages/srstoragetabpage.cpp
    tabpages/srstoragetabpage.ui
    tabpages/vmstoragetabpage.cpp
    tabpages/vmstoragetabpage.ui
    titlebar.cpp
    widgets/cdchanger.cpp
    widgets/isodropdownbox.cpp
    widgets/notificationssubmodeitem.cpp
    widgets/notificationsview.cpp
    widgets/notificationsview.ui
    widgets/progressbardelegate.cpp
    widgets/tableclipboardutils.cpp
    widgets/verticaltabwidget.cpp
    widgets/vmmemorycontrols.cpp
    widgets/vmmemoryrow.cpp
    widgets/wizardnavigationpane.cpp
    widgets/wizardnavigationpane.ui
    xensearch/treenodefactory.cpp
    xensearch/treenodegroupacceptor.cpp
    xensearch/treesearch.cpp
)

qt_add_executable(xenadmin-qt ${XENADMIN_SOURCES})

# Headers within xenadmin-ui use relative includes such as
# "controls/memoryspinner.h" from dialogs/ — this directory must be
# a search root so the compiler can resolve them.
target_include_directories(xenadmin-qt PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

# OpenSSL is inherited transitively from xenlib's PUBLIC target_link_libraries.

target_link_libraries(xenadmin-qt
    PRIVATE
        xenlib
        Qt6::Widgets
        Qt6::Network
        Qt6::Xml
        Qt6::Charts
)

if(UNIX AND NOT APPLE)
    find_package(PkgConfig QUIET)
    if(PkgConfig_FOUND)
        # Probe freerdp3 first (Ubuntu 24.04+ / Debian 12+), fall back to freerdp2.
        # The qmake build links freerdp-client2 and winpr2 explicitly; pkg-config
        # Libs metadata for both freerdp2 and freerdp3 includes those same libraries,
        # so ${FREERDP_LIBRARIES} is equivalent.
        pkg_check_modules(FREERDP QUIET freerdp3)
        if(NOT FREERDP_FOUND)
            pkg_check_modules(FREERDP QUIET freerdp2)
        endif()
        if(FREERDP_FOUND)
            message(STATUS "FreeRDP found - enabling RDP support")
            target_compile_definitions(xenadmin-qt PRIVATE HAVE_FREERDP)
            target_link_libraries(xenadmin-qt PRIVATE ${FREERDP_LIBRARIES})
            target_include_directories(xenadmin-qt PRIVATE ${FREERDP_INCLUDE_DIRS})
        else()
            message(STATUS "FreeRDP not found - RDP support disabled (VNC-only)")
        endif()
    endif()
endif()

install(TARGETS xenadmin-qt)
